# python-starter

./: .coveragerc  .flake8  .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  python-package-conda.yml  python-package-windows.yml  python-package.yml
packagename/: __main__.py  core.py
tests/: test_core.py
