[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packagename"
version = "0.1.0"
description = "YOUR DESCRIPTION"
authors = [{ name = "YOUR NAME", email = "YOUR_EMAIL@example.com" }]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
]

[project.scripts]
packagename = "packagename.__main__:main"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
